5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1649_2445.log
== TEST (2019-04-09 18:36:35) 
-- CODE:
c = float(input("digite em celsius: "))
f = float(input("digite em fahrenheit: "))

formula = 5/9 * (f - 32) / c

if c: 
	print(formula)
else:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    c = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:37:30) 
-- CODE:
c = float(input("digite em celsius: "))
f = float(input("digite em fahrenheit: "))

formula = 5/9 * (f - 32) / c

if c: 
	print(formula)
else:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    c = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:34) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula = 5/9 * (F - 32) / C

if valor == C:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    formula = 5/9 * (F - 32) / C
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:44) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula = 5/9 * (F - 32) / C

if valor == C:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    formula = 5/9 * (F - 32) / C
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:55) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula = 5/9 * (F - 32)

if valor == C:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    formula = 5/9 * (F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:40:04) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula = 5/9 * (F - 32)

if valor == C:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    formula = 5/9 * (F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:40:07) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula = 5/9 * (f - 32)

if valor == C:
	print(formula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    formula = 5/9 * (f - 32)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:03:17) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (f - 32)
formula2 = c * 5/9 + 32
if valor == C:
	print(formula1)
else:
	print(formula2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    formula1 = 5/9 * (f - 32)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:03:42) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if valor == C:
	print(formula1)
else:
	print(formula2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if valor == C:
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:04:04) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if valor == "C"
	print(formula1)
else:
	print(formula2)
	
-- ERROR:
File "XXXX", line 5
    if valor == "C"
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:04:28) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C"
	print(formula1)
else:
	print(formula2)
	
-- ERROR:
File "XXXX", line 5
    if escala == "C"
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:05:07) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "c"
	print(formula1)
else:
	print(formula2)
	
-- ERROR:
File "XXXX", line 5
    if escala == "c"
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:05:36) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F"
	print(formula1)
else:
	print(formula2)
	
-- ERROR:
File "XXXX", line 5
    if escala == "F"
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:05:49) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C":
	print(formula1)
else:
	print(formula2)
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:02) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:07:09) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))
	
-- EXECUTION TIME:
0.156297
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
209.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:09) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:27) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C":
	print(round(formula2,2))
else:
	print(round(formula1,2))
	
-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:07:32) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "C":
	print(round(formula2,2))
else:
	print(round(formula1,2))
	
-- EXECUTION TIME:
0.177059
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
209.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:50) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula2 = valor * 5/9 + 32
formula1 = 5/9 * (valor - 32)
if escala == "C":
	print(round(formula2,2))
else:
	print(round(formula1,2))
	
-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:07:54) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula2 = valor * 5/9 + 32
formula1 = 5/9 * (valor - 32)
if escala == "C":
	print(round(formula2,2))
else:
	print(round(formula1,2))
	
-- EXECUTION TIME:
0.159318
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
209.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:55) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula2 = valor * 5/9 + 32
formula1 = 5/9 * (valor - 32)
if escala == "C":
	print(round(formula2,2))
else:
	print(round(formula1,2))
	
-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:29) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F:
	print(round(formula1 2))
else:
	print(round(formula2 2))

-- ERROR:
File "XXXX", line 5
    if escala == "F:
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:36) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F":
	print(round(formula1 2))
else:
	print(round(formula2 2))

-- ERROR:
File "XXXX", line 6
    print(round(formula1 2))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:47) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2. 2))

-- ERROR:
File "XXXX", line 8
    print(round(formula2. 2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:54) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:08:59) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- EXECUTION TIME:
0.18176
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
209.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:09:01) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:09:03) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor * 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:09:29) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor / 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
39.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:09:34) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor / 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- EXECUTION TIME:
0.219419
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
39.11
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:09:35) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor / 5/9 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
39.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:18) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor + 32 / 5/9
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
320.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:14:22) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor + 32 / 5/9
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- EXECUTION TIME:
0.159387
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
320.71
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
0.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:22) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor + 32 / 5/9
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
320.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:39) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = valor + 32 / 5/9
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
320.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:25) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = (valor + 32) / (5/9)
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:49) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = (valor + 32) / (5/9)
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- EXECUTION TIME:
0.187721
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:49) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = (valor + 32) / (5/9)
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:54) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = (valor + 32) / (5/9)
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- EXECUTION TIME:
0.179861
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:54) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = (valor + 32) / (5/9)
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:15) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = 9*valor/5 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:17:19) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = 9*valor/5 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- EXECUTION TIME:
0.191981
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:19) 
-- CODE:
escala = (input("digite a escala: (C/F)"))
valor = float(input("digite a temperatura: "))
formula1 = 5/9 * (valor - 32)
formula2 = 9*valor/5 + 32
if escala == "F":
	print(round(formula1, 2))
else:
	print(round(formula2, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
